--- a/Salon/SocketSwing/src/socketswing/Server.form
+++ b/Salon/SocketSwing/src/socketswing/Server.form
@@ -27,7 +27,7 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane1" alignment="0" pref="546" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" alignment="0" pref="726" max="32767" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="jButton1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
@@ -63,6 +63,7 @@
       <SubComponents>
         <Component class="javax.swing.JTextArea" name="chat">
           <Properties>
+            <Property name="editable" type="boolean" value="false"/>
             <Property name="columns" type="int" value="20"/>
             <Property name="rows" type="int" value="5"/>
           </Properties>
